MDEV-38987 ASAN heap-use-after-free upon using a view through a trigger in ORACLE mode

Outdated table_list->derived_result after first trigger run. It was
allocated on statment mem_root and freed when trigger procedure
finishes.

Next INSERT trigger on new view in mysql_derived_prepare() jumps to
exit on error before it had a chance to allocate new derived_result.

It jumps here:

797           if ((res= sl->handle_derived(lex, DT_PREPARE)))
798             goto exit;

and the allocation is later:

837       if ((!derived->is_with_table_recursive_reference() ||
838            !derived->derived_result) &&
839           !(derived->derived_result= new (thd->mem_root) select_unit(thd)))
840         DBUG_RETURN(TRUE); // out of memory

on exit it does destruction of already freed object from previous statement:

901     exit:
...
921       if (res)
922       {
923         if (!derived->is_with_table_recursive_reference())
924         {
...
927           delete derived->derived_result;

The most obvious fix is to cleanup derived_result when the TABLE_LIST
is reinited for new use. Also as a precaution the patch does the
cleanup after delete operator.